--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,55 +1,61 @@
 .container-fluid {
     position: relative;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
 }
 
 .bakground {
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: -10;
 }
 
 .container-fluid .brand {
-    margin-top : 180px;
-    color:#ffffff;
+    margin-top: 180px;
+    color: #ffffff;
 }
+
 .container-fluid .brand .brand-title {
-    text-align:center;
-    font-size : 3em;
-    font-weight:300;
+    text-align: center;
+    font-size: 3em;
+    font-weight: 300;
 }
+
 .container-fluid .brand .brand-title-ch {
-    font-size : 7em;
-    font-weight:lighter;
-    margin-top : 20px;
+    font-size: 7em;
+    font-weight: lighter;
+    margin-top: 20px;
     text-align: center;
 }
+
 .container-fluid .brand .brand-content {
-    margin-top:30px;
-    font-size:2.25em;
+    margin-top: 30px;
+    font-size: 2.25em;
     text-align: center;
     color: #DADADA;
     font-weight: 100;
 }
+
 .container-fluid .brand .brand-button {
     text-align: center;
-    margin-top:50px;
+    margin-top: 50px;
 }
+
 .container-fluid .brand .brand-button button {
-    font-size:1em;
-    padding-left:80px;
-    padding-top : 12px;
-    padding-bottom : 12px;
-    padding-right:80px;
+    font-size: 1em;
+    padding-left: 80px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 80px;
     letter-spacing: 10px;
 }
 
-.navbar-default .navbar-nav >li>a {
+.navbar-default .navbar-nav > li > a {
     color: #fff;
     font-weight: lighter;
 }
+
 .navbar-default .navbar-brand {
     color: #fff;
 }
@@ -57,6 +63,25 @@
 .btn-default {
     color: #fff;
     background: none;
-    border : 1px solid #ffffff;
-    font-weight:lighter;
+    border: 1px solid #ffffff;
+    font-weight: lighter;
 }
+
+.spacing-btn {
+    margin-top:10px;
+}
+
+@media (min-width: 768px) {
+    .container-fluid .brand .brand-content {
+        font-size: 26px;
+    }
+    .container-fluid .brand .brand-title-ch {
+        font-size : 6em;
+    }
+
+    .tab-p {
+        font-size: 16px;
+    }
+}
+
+
